<resources>
    <string name="app_name">Demorô</string>
    <string name="evento">Evento</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="eventos">Eventos</string>
    <string name="novo_evento">Novo evento</string>
    <string name="titulo_criacao">Título do seu evento</string>
    <string name="data_criacao">Data do seu evento</string>
    <string name="limite_de_convidados">Limite de convidados*</string>
    <string name="hora_zero">00:00</string>
    <string name="descricao_criacao">Descrição</string>
    <string name="de">das </string>
    <string name="as">às</string>
    <string name="criar">Criar</string>
    <string name="dia">Dia</string>
    <string name="salvar">Salvar</string>
    <string name="participarao"><u>Participarão</u></string>
    <string name="participar">participar</string>
    <string name="confirmar_presentes">Confirmar presentes em </string>
    <string name="nenhum_evento_a_mostrar">Nenhum evento a ser mostrado… Crie um ou siga seus amigos!</string>
    <string name="ninguem_confirmou_ainda">Ninguém confirmou presença neste evento ainda, seja o primeiro!</string>
    <string name="senha">Senha</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="entrar">Entrar</string>
    <string name="criar_conta">Ainda não possui uma conta?</string>
    <string name="registrar">Registrar</string>
    <string name="endereco">Endereço</string>
    <string name="inicio">Início</string>
    <string name="fim">Fim*</string>
    <string name="dataVazia">00/00/0000</string>
    <string name="opcional">*Opcional</string>
    <string name="nome">Nome</string>
    <string name="seguir">Seguir</string>
    <string name="seguindo">Seguindo</string>
    <string name="indice_de_presenca">Presenca : </string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="procurar">Procurar</string>
    <string name="perfil">Perfil</string>
    <string name="sair">Sair</string>
    <string name="enviar">Enviar</string>
    <string name="redefinir_senha">Redefinir senha</string>
    <string name="insira_email">Insira seu email</string>
    <string name="email_invalido">Email não registrado</string>
    <string name="esqueci_senha">Esqueceu sua senha?</string>
    <string name="convidar">Convidar</string>
    <string name="convidado">Convidado</string>
    <string name="meus_eventos">Meus Eventos</string>
    <string name="configuracoes">Configurações</string>
    <string name="confirmado">Demorô!</string>
    <string name="ir">Bora?</string>
    <string name="te_convidou"> te convidou para um evento</string>
    <string name="criou_um_evento"> criou um evento</string>

    <string-array name="tipos_de_privacidade">
        <item>Privacidade</item>
        <item>Público</item>
        <item>Privado</item>
    </string-array>

    <string-array name="meses">
        <item>Jan</item>
        <item>Fev</item>
        <item>Mar</item>
        <item>Abr</item>
        <item>Mai</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Ago</item>
        <item>Set</item>
        <item>Out</item>
        <item>Nov</item>
        <item>Dez</item>
    </string-array>

    <string name="title_activity_resultado_pesquisa">ResultadoPesquisaActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="obrigado_por_contribuir">Obrigado por contribuir</string>
    <string name="sua_contribuicao_e_importante">Sua contribuição é muito importante para o funcionamento da rede!</string>
    <string name="confirmados">Confirmados</string>
    <string name="convidados">Convidados</string>
    <string name="seguidores">Seguidores</string>
    <string name="ver_todos">Ver todos</string>
    <string name="lotado">Lotado</string>
    <string name="partcipando">Participando</string>
    <string name="evento_sera_cancelado">Evento será cancelado</string>
    <string name="certeza_que_quer_cancelar">Tem certeza que quer cancelar o evento?</string>
    <string name="parece_que_ja_esta_acontecendo">Parece que seu evento  já aconteceu ou está acontecendo.    Confirme quem realmente foi.</string>
    <string name="ok">Ok</string>
    <string name="agora_nao">Agora não</string>
    <string name="nao_registrado">Email ou senha não encontrados</string>
    <string name="preencha_os_campos">Preencha os campos</string>
    <string name="criados_por_mim">Criados por mim</string>
    <string name="redefinir_sua_senha">Redefinir senha</string>
    <string name="a">a</string>
</resources>
