<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="2dp"
    card_view:contentPadding="1dp"
    card_view:cardElevation="5dp"
    android:layout_margin="2dp"
    android:focusable="true"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground">

    <ImageView
        android:id="@+id/foto_usuario_confirmacao"
        android:layout_width="50dp"
        android:layout_height="50dp"
        card_view:srcCompat="@drawable/ic_person_black_24dp" />
    <TextView
        android:id="@+id/nome_usuario_item_confirmacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="23dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp" />
    <Button
        android:id="@+id/foi_item_confirmacao"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:text="@string/sim"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@android:color/holo_green_light" />
    <Button
        android:id="@+id/nao_foi_item_confirmacao"
        android:layout_width="62dp"
        android:layout_height="wrap_content"
        android:text="@string/nao"
        android:layout_marginLeft="260dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@android:color/holo_red_light" />

</android.support.v7.widget.CardView>